--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,13 +36,8 @@ dependencies:
   logger: any  #for logging purpose
   built_value: ^8.9.2
 
-  #comparing dart objects
-  equatable: ^2.0.5
-  freezed: ^2.0.4
-
   # state management
   flutter_bloc: ^8.1.4
-  bloc_concurrency: ^0.2.5
 
   #service locater
   get_it: ^7.7.0
@@ -57,6 +52,8 @@ dependencies:
   
   #for equality and immutability
   freezed_annotation: ^2.4.4
+
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
@@ -71,6 +68,9 @@ dev_dependencies:
 
   build_runner: '>=2.3.0 <4.0.0'
   injectable_generator: ^2.6.2
+
+  test: ^1.25.5
+  build_test: ^2.2.2
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -87,6 +87,7 @@ flutter:
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
+
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
