--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,7 +69,8 @@ dev_dependencies:
   build_runner: '>=2.3.0 <4.0.0'
   injectable_generator: ^2.6.2
 
-  test: ^1.25.5
+  test: ^1.25.7
+  bloc_test: ^9.1.7
   build_test: ^2.2.2
   mocktail: ^1.0.4
 
