--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,14 +69,11 @@ dev_dependencies:
   build_runner: '>=2.3.0 <4.0.0'
   injectable_generator: ^2.6.2
 
-  test: ^1.25.5
+  test: ^1.25.7
+  bloc_test: ^9.1.7
   build_test: ^2.2.2
+  mocktail: ^1.0.4
 
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^4.0.0
 
 # For information on the generic Dart part of this file, see the
