--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,18 +31,18 @@ dependencies:
   flutter:
     sdk: flutter
 
+  window_size:
+    git:
+      url: https://github.com/google/flutter-desktop-embedding
+      path: plugins/window_size
+
   #networking
   chopper: ^8.0.1+1
   logger: any  #for logging purpose
   built_value: ^8.9.2
 
-  #comparing dart objects
-  equatable: ^2.0.5
-  freezed: ^2.0.4
-
   # state management
   flutter_bloc: ^8.1.4
-  bloc_concurrency: ^0.2.5
 
   #service locater
   get_it: ^7.7.0
@@ -57,6 +57,8 @@ dependencies:
   
   #for equality and immutability
   freezed_annotation: ^2.4.4
+
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
@@ -72,11 +74,11 @@ dev_dependencies:
   build_runner: '>=2.3.0 <4.0.0'
   injectable_generator: ^2.6.2
 
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
+  test: ^1.25.7
+  bloc_test: ^9.1.7
+  build_test: ^2.2.2
+  mocktail: ^1.0.4
+
   flutter_lints: ^4.0.0
 
 # For information on the generic Dart part of this file, see the
@@ -87,6 +89,7 @@ flutter:
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
+
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
